syntax = "proto3";

package buildbarn.playground.configuration.playground_storage_frontend;

import "pkg/proto/configuration/global/global.proto";
import "pkg/proto/configuration/grpc/grpc.proto";
import "pkg/proto/storage/object/object.proto";

option go_package = "github.com/buildbarn/bb-playground/pkg/proto/configuration/playground_storage_frontend";

message ApplicationConfiguration {
  // Common configuration options that apply to all Buildbarn binaries.
  buildbarn.configuration.global.Configuration global = 1;

  // gRPC servers to spawn to listen for requests from clients.
  repeated buildbarn.configuration.grpc.ServerConfiguration grpc_servers = 2;

  // The maximum number of concurrent write operations this process
  // should issue against object storage.
  int64 object_store_concurrency = 3;

  // The maximum number of DAGs may be uploaded in parallel as part of a
  // single call to UploadDags().
  uint32 maximum_unfinalized_dags_count = 4;

  // The maximum number of parent objects and combined total size this
  // process is willing to keep in memory as part of a single call to
  // UploadDags().
  buildbarn.playground.storage.object.Limit maximum_unfinalized_parents_limit =
      5;

  // gRPC clients for connecting to the shards belonging to replica A.
  //
  // This process acts as a frontend for playground_storage_node
  // processes. These storage nodes are placed in a mirrored and sharded
  // configuration. This list can be used to specify all shards
  // belonging to the first replica of the mirror.
  repeated buildbarn.configuration.grpc.ClientConfiguration
      grpc_clients_shards_replica_a = 6;

  // gRPC clients for connecting to the shards belonging to replica B.
  //
  // This process acts as a frontend for playground_storage_node
  // processes. These storage nodes are placed in a mirrored and sharded
  // configuration. This list can be used to specify all shards
  // belonging to the second replica of the mirror.
  repeated buildbarn.configuration.grpc.ClientConfiguration
      grpc_clients_shards_replica_b = 7;
}
